Create player file

--- a/database/index.html
+++ b/database/index.html
@@ -18,10 +18,15 @@
 	<body>
 
 		<h1>Database Testing Suite</h1>
+
+		<script type="text/javascript" src="../lib/util.js"></script>
+		<script type="text/javascript" src="./player.js"></script>
 		
 		<script type="text/javascript">
 
-			
+			var arr = [2,2,4,5];
+			var res = Util.uniqueList(arr);
+			console.log(res);
 
 		</script>
 	
