--- a/database/index.html
+++ b/database/index.html
@@ -21,6 +21,7 @@
 
 		<script type="text/javascript" src="../lib/util.js"></script>
 		<script type="text/javascript" src="./player.js"></script>
+		<script type="text/javascript" src="./league.js"></script>
 		
 		<script type="text/javascript">
 
