Add generate league function

--- a/database/index.html
+++ b/database/index.html
@@ -25,30 +25,28 @@
 		
 		<script type="text/javascript">
 
-			var arr = [2,2,4,5];
-			var res = Util.uniqueList(arr);
-			console.log(res);
+
+			var testUsers = {
+				'userid0001': {
+					name: 'Derek Eder'
+				},
+				'userid0002': {
+					name: 'Nina Sandlin'
+				},
+				'userid0003': {
+					name: 'Karl Fogel'
+				}
+			}
 
 			var testLeague = {
 				id: 'leagueid0008',
 				name: 'ChiHackNight',
 				start: 1487138400000,
 				end: 1489554000000,
-				users: {
-					'userid0001': {
-						name: 'Derek Eder'
-					},
-					'userid0002': {
-						name: 'Nina Sandlin'
-					},
-					'userid0003': {
-						name: 'Karl Fogel'
-					}
-				}
+				users: Object.keys(testUsers)
 			}
 
-			var users = Object.keys(testLeague.users);
-				users = League.fixUserList(users, BOT_MAP);
+			var users = League.fixUserList(testLeague.users, BOT_MAP);
 
 			// Test Generate Schedule
 			console.log('Test Generate Schedule');
@@ -59,6 +57,8 @@
 			console.log('Test Generate Rosters');
 			var rosters = League.generateRosters(users, PLAYER_MAP);
 			console.log(rosters);
+
+
 
 		</script>
 	
