--- a/database/index.html
+++ b/database/index.html
@@ -19,9 +19,11 @@
 
 		<h1>Database Testing Suite</h1>
 
+		<script type="text/javascript" src="../assets/jquery-3.1.1.min.js"></script>
 		<script type="text/javascript" src="../lib/util.js"></script>
 		<script type="text/javascript" src="./player.js"></script>
 		<script type="text/javascript" src="./league.js"></script>
+		<script type="text/javascript" src="./scoring.js"></script>
 		
 		<script type="text/javascript">
 
