Pull player name with league and score data

--- a/database/index.html
+++ b/database/index.html
@@ -80,7 +80,7 @@
 				console.log(data.length, data);
 			}).catch((err) => {
 				console.log('Test Scoring Requests');
-				console.log(err);
+				console.error(err);
 			});
 
 
@@ -94,7 +94,7 @@
 				console.log(data);
 			}).catch((err) => {
 				console.log('Test Get League Response');
-				console.log(err);
+				console.error(err);
 			});
 
 
