--- a/database/index.html
+++ b/database/index.html
@@ -34,6 +34,7 @@
 		<h1>Database Testing Suite</h1>
 
 		<script type="text/javascript" src="../assets/promise.min.js"></script>
+		<script type="text/javascript" src="../assets/moment.min.js"></script>
 		<script type="text/javascript" src="../assets/jquery-3.1.1.min.js"></script>
 		<script type="text/javascript" src="../lib/util.js"></script>
 		<script type="text/javascript" src="./player.js"></script>
