database previously working, now has error, firebase is not defined

--- a/app/index.html
+++ b/app/index.html
@@ -30,18 +30,28 @@
 		<!-- Start read requests -->
 
 		<h2>User Login</h2>
-		<form>
+		<div>
 			<input type="button" value="Google Authentication" onclick="Application().userLogin()">
-		</form>
+		</div>
+
+		<h2>Display League</h2>
+		<div>
+			
+		</div>
 
 
 		<!-- End read requests -->
 
 		<!-- script -->
+		<script type="text/javascript" src="../assets/promise.min.js"></script>
+		<script type="text/javascript" src="../assets/moment.min.js"></script>
+		<script type="text/javascript" src="../assets/jquery-3.1.1.min.js"></script>
+		<script type="text/javascript" src="../lib/util.js"></script>
+		<script type="text/javascript" src="../database/player.js"></script>
+		<script type="text/javascript" src="../database/league.js"></script>
+		<script type="text/javascript" src="../database/scoring.js"></script>
+		<script type="text/javascript" src="../database/database.js"></script>
 		<script type="text/javascript" src="app.js"></script>
 		<script type="text/javascript" src="main.js"></script>
-		<script type="text/javascript" src="../database/player.js"></script>
-		<script type="text/javascript" src="../database/database.js"></script>
-		<script type="text/javascript" src="../database/league.js"></script>
 	</body>
 </html>
