--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Requests</title>
 
+		<script src="https://www.gstatic.com/firebasejs/3.6.9/firebase.js"></script>
 		<script type="text/javascript" src="../assets/vue.js"></script>
 		<script type="text/javascript" src="../assets/promise.min.js"></script>
 	</head>
@@ -43,9 +44,9 @@
 		<!-- End read requests -->
 
 		<!-- script -->
-		<script type="text/javascript" src="../assets/promise.min.js"></script>
+<!-- 		<script type="text/javascript" src="../assets/promise.min.js"></script>
 		<script type="text/javascript" src="../assets/moment.min.js"></script>
-		<script type="text/javascript" src="../assets/jquery-3.1.1.min.js"></script>
+		<script type="text/javascript" src="../assets/jquery-3.1.1.min.js"></script> -->
 		<script type="text/javascript" src="../lib/util.js"></script>
 		<script type="text/javascript" src="../database/player.js"></script>
 		<script type="text/javascript" src="../database/league.js"></script>
