--- a/database/index.html
+++ b/database/index.html
@@ -205,6 +205,19 @@
 				console.error(err);
 			});
 
+			/*Database.movePlayer({
+				leagueid: l1,
+				userid: 'testuser0002',
+				sit: 'playerid0020',
+				start: 'playerid0031'
+			}).then((res) => {
+				console.log('Test Move Player Request');
+				console.log(res);
+			}).catch((err) => {
+				console.log('Test Move Player Request');
+				console.error(err);
+			});*/
+
 			/*Database.createLeague({
 				name: 'Old League',
 				start: new Date('1/7/2017').getTime(),
