Add authentication functions

--- a/database/index.html
+++ b/database/index.html
@@ -37,6 +37,7 @@
 		<script type="text/javascript" src="./player.js"></script>
 		<script type="text/javascript" src="./league.js"></script>
 		<script type="text/javascript" src="./scoring.js"></script>
+		<script type="text/javascript" src="./auth.js"></script>
 		<script type="text/javascript" src="./database.js"></script>
 		
 		<script type="text/javascript">
@@ -231,7 +232,6 @@
 				console.log('Testing Create League');
 				console.error(err);
 			});*/
-
 
 		</script>
 	
