working on login

--- a/app/index.html
+++ b/app/index.html
@@ -61,6 +61,7 @@
 		<script type="text/javascript" src="../database/player.js"></script>
 		<script type="text/javascript" src="../database/league.js"></script>
 		<script type="text/javascript" src="../database/scoring.js"></script>
+		<script type="text/javascript" src="../database/auth.js"></script>
 		<script type="text/javascript" src="../database/database.js"></script>
 		<script type="text/javascript" src="app.js"></script>
 		<script type="text/javascript" src="main.js"></script>
